# property-finder

./: README.md  pyproject.toml
linkedin_summarizer/backend/: agent.py  agents.py  execution.py  tagging_service.py  tool.py  trial.py
linkedin_summarizer/configuration/: config.py  toml_support.py
linkedin_summarizer/frontend/: main.py
linkedin_summarizer/langchain_agent/: data_read.py  extract_properties.py  templates.py
linkedin_summarizer/test/: test.py
